# Dynamic-CrewAI

./: .cursorignore  .gitignore  MANAGER_AGENT_CREWAI_INTEGRATION.md  Phase_7_Implementation_Summary.md  crewai_backend_prompt.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  LINTER_FIXES_APPLIED.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_QUICK_REFERENCE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  demo_phase4_delegation.py  demo_phase7_dynamic_generation.py  phase3_test_results.md  pyproject.toml  pytest.ini  requirements.txt  test_memory_basic.py  test_phase3.py  test_phase4_delegation.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_memory_system.py  0002_add_manager_agent_fields.py  007_add_dynamic_generation_tables.py  5bba45d2ee71_initial_database_schema_with_all_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  agent_wrapper.py  crew_wrapper.py  dynamic_crew_generator.py  execution_engine.py  llm_wrapper.py  manager_agent_wrapper.py  tool_registry.py
backend/app/integrations/: __init__.py  crewai_memory.py
backend/app/memory/: README.md  __init__.py  base_memory.py  entity_memory.py  long_term_memory.py  mock_memory_impl.py  short_term_memory.py
backend/app/models/: __init__.py  agent.py  crew.py  execution.py  generation.py  llm_provider.py  memory.py  metrics.py
backend/app/monitoring/: __init__.py  alerts.py  health_checks.py  notifications.py
backend/tests/: conftest.py  test_config.py  test_models.py  test_schemas.py
(+74 files in other folders)
